pl 9.hwn1
	- abstracting Staff_symbol_referencer to an interface.
	- quantised_position for staccato dots.
	- standchen fixes
	- junk Score_element::do_{width,height}: set callbacks directly.
	- merge Score_element, Graphical_element
	- merge Axis_group_element, Graphical_axis_group
	- junk pointer fields fromScore_element derived classes
	- junk obsolete do_substitute_dependency code.

**********

pl 8.hwn2
	- staff-support for Crescendi.
	- padding for accidentals.
	- cascading offset callbacks

pl 8.hwn1
	- note-head-side 
	- naming Staff_sidify -> Side_position_interface

***********

pl 7.mb1
	- bf: timeSignatureStyle works again

pl 7.hwn1
	- Dirk Latterman key/mmrest patches
	- Offset callbacks in Dimension_cache
	- Junked Staff_side_*
	- Staff_sidify: interface class.
	- prelude-{1,2} fixes.

***********
pl 6.uu2
	- bf: PS font selecting.

pl 6.uu1
	- bf: ls-latex
	- mudela-book --no-pictures
	- bf: ly2dvi
	- convert-mudela: beamAuto moment syntax. 

pl 6.jcn3
	- fixed scm output

pl 6.jcn2
	- half-baken ly-gulp-file in scm
	- resurrected scm output through guile

pl 5.mb1
	- bf: version of init.sly, init.fly
	- Clarify necessary version of texinfo
	- bf: texi files, minor errors and syntax compatible with 
	  older makeinfo

pl 6.jcn1
	- bf: scm output

*******

pl 5.hwn2
	- Bach preludes: mutopification
	- dots are Directional_element too; use \property dotDirection
	- moved some stuff out of Lookup
	- bf: dots
	- font selection mechanics changed.

pl 5.uu1
	- bf: smob allocation (thanks David!)

pl 5.hwn1
	- junked \shape. Now use #'margin-shape 
	- timing: one_beat -> \property beatLength
	- bf convert-mudela

************

pl 4.uu1
	- input/test/ \property fixes.
	- gcc 2.95 fix

pl 4.hwn1
	- Break_align_engraver,
	break align order from  \property breakAlignOrder
	- junked Score_priority_engraver
	- moved Time_description into Timing_translator
	- use properties for timing, see input/test/timing.fly
	* removed \cadenza ; now use \property Score.timing