@@ -1,9 +1,0 @@
-#ifndef GLOB_HH
-#define GLOB_HH
-#include <assert.h>
-#include <math.h>
-#include "real.hh"
-
-#include "lily-proto.hh"
-#include "const.hh"
-#endif
