@@ -1,3 +1,7 @@
+pl 10.jcn1
+	- steminfo to properties
+	- dropped internote dim for stem-beams
+
 pl 9.hwn1
 	- abstracting Staff_symbol_referencer to an interface.
 	- quantised_position for staccato dots.
